Test/typing/should_fail/method_call_no_type.java
class A {
    public void main(String[] args) {
        int result = B.myMethod(10);
    }
}
